# cmake_build

./: CMakeLists.txt  README.md
hdr/: header.h
src/: file.c
src/sub_src/: add.c  sub.c
